apps/kibana/noctua/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibana
  namespace: elk
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
  hostnames:
    - kibana.saadisfy.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kibana-kibana
          port: 5601
